test/semantics/programs/valid/func-args-match-params.guav
# Should pass since function call arguments match function declaration parameters

# Let arr be some integer array of at least length 2 and x and y be integers
f(arr, x, y) {
    x /= y
    ret x / arr[1] + y
}

print(f([3, 4, 89], 4, 7))
