test/semantics/programs/invalid/invalid-dictionary-access.guav
# Should fail since b has type dictionary, not array

b = {one: 1, two: 2, three: 3}
print(b[2])
